--- a/template.html
+++ b/template.html
@@ -5,19 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
+    <script src="https://kit.fontawesome.com/e3f2f9bf33.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
     <header>
+        <p id="logo"><> Tyson Jenkins</p>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="resume.html">Resume</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <footer>
+        <div class="footer-icons">
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-github"></i>
+        </div>
+        <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+    </footer>
 </body>
 </html>
