Complete the home page

--- a/index.html
+++ b/index.html
@@ -3,30 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/dejavu-sans-mono" type="text/css"/>
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
-    <script src="scripts/index.js" defer></script>
+    <script src="scripts/index.js" defer ></script>
     <script src="https://kit.fontawesome.com/e3f2f9bf33.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <p id="logo"><> Tyson Jenkins</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <footer>
-        <div class="footer-icons">
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
+    <div class="hero-section">
+        <header>
+            <div class="nav-bar">
+                <p id="logo"><> Tyson Jenkins</p>
+                <nav>
+                    <ul>
+                        <li ><a id="current-page" href="index.html">Home</a></li>
+                        <li><a href="skills.html">Skills</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <div class="hero-section-item">
+                <div class="hero-title">
+                    <h1 id="hero-name">Tyson Jenkins</h1>
+                    <p>Programmer</p>
+                </div>
+                <div class="hero-icons">
+                    <a href="https://github.com/timmyjinks"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div class="hero-section-item">
+                <blockquote id="hero-quote"></blockquote>
+            </div>
+        </main>
+    </div>
+    <section>
+        <div class="resume">
+            <h1>Resume</h1>
+            <embed src="images/Resume.pdf" alt="resume">
         </div>
-        <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+    </section>
+    <footer>
+        <div class="footer-items">
+            <h1>Tyson Jenkins</h1>
+            <div class="footer-contact">
+                <a href="https://github.com/timmyjinks">GitHub</a>
+                <a href="https://www.linkedin.com/feed/">Linkedin</a>
+            </div>
+            <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+        </div>
     </footer>
 </body>
 </html>
