--- a/template.html
+++ b/template.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
     <script src="https://kit.fontawesome.com/e3f2f9bf33.js" crossorigin="anonymous"></script>
@@ -16,7 +17,6 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="resume.html">Resume</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
