--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/skills.css">
     <script src="scripts/index.js" defer></script>
     <script src="https://kit.fontawesome.com/e3f2f9bf33.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
@@ -21,6 +21,30 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <h1>Skills</h1>
+        <div class="skills">
+            <div class="skills-item">
+                <h3>Knowledgeable</h3>
+                <p>HTML</p>
+                <p>Java</p>
+                <p>Python</p>
+                <p>Git</p>
+            </div>
+            <div class="skills-item">
+                <h3>Some Knowledge</h3>
+                <p>Javascript</p>
+                <p>C</p>
+                <p>C++</p>
+                <p>Rust</p>
+            </div>
+        </div>
+        <div class="logos">
+            <img src="images/html.png">
+            <img src="images/python.png">
+            <img src="images/rust.png">
+        </div>
+    </section>
     <footer>
         <div class="footer-icons">
             <i class="fa-brands fa-linkedin"></i>
