Update projects page

--- a/skills.html
+++ b/skills.html
@@ -11,15 +11,17 @@
 </head>
 <body>
     <header>
-        <p id="logo"><> Tyson Jenkins</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a id="current-page" href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
+        <div class="nav-bar">
+            <p id="logo"><> Tyson Jenkins</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a id="current-page" href="skills.html">Skills</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <section>
         <h1>Skills</h1>
@@ -46,11 +48,14 @@
         </div>
     </section>
     <footer>
-        <div class="footer-icons">
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
+        <div class="footer-items">
+            <h1>Tyson Jenkins</h1>
+            <div class="footer-contact">
+                <a href="https://github.com/timmyjinks">GitHub</a>
+                <a href="https://www.linkedin.com/feed/">Linkedin</a>
+            </div>
+            <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
         </div>
-        <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
     </footer>
 </body>
 </html>
