--- a/about.html
+++ b/about.html
@@ -4,29 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="styles/about.css">
     <script src="scripts/index.js" defer></script>
     <script src="https://kit.fontawesome.com/e3f2f9bf33.js" crossorigin="anonymous"></script>
     <title>Portfolio</title>
 </head>
 <body>
     <header>
-        <p id="logo"><> Tyson Jenkins</p>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="skills.html">Skills</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a id="current-page" href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-    <footer>
-        <div class="footer-icons">
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
+        <div class="nav-bar">
+            <p id="logo"><> Tyson Jenkins</p>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="skills.html">Skills</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a id="current-page" href="about.html">About</a></li>
+                </ul>
+            </nav>
         </div>
-        <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+    </header>
+    <section>
+        
+    </section>
+    <footer>
+        <div class="footer-items">
+            <h1>Tyson Jenkins</h1>
+            <div class="footer-contact">
+                <a href="https://github.com/timmyjinks">GitHub</a>
+                <a href="https://www.linkedin.com/feed/">Linkedin</a>
+            </div>
+            <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+        </div>
     </footer>
 </body>
 </html>
