Complete about me page

--- a/about.html
+++ b/about.html
@@ -24,7 +24,22 @@
         </div>
     </header>
     <section>
-        
+        <div class="about">
+            <div class="about-item">
+                <h1>About Me</h1>
+                <p>
+                    My name is Tyson and I attend Neumont College of Computer Science. I like playing video games and I
+                    am currently playing <strong>Cyberpunk 2077</strong>. I also like to read and I am currently reading
+                    a book called Goodnight punpun.
+                    I like to code and create projects. I started to like coding when I heard videogames were made coding.
+                    In highschool I took computer science classes that introduced me to coding. Although they were hard
+                    I enjoyed every second of it. Now attend <em>Neumont</em> and I am still enjoying learning new things.
+                </p>
+            </div>
+            <div class="about-item">
+                 <img src="images/timmy.jpg">
+            </div>
+        </div>
     </section>
     <footer>
         <div class="footer-items">
