--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="hero-section-item">
-                <blockquote id="hero-quote"></blockquote>
+                <blockquote id="hero-quote">"If I look up into the sky at night, and see, like a McDonald's ad, I'm becoming a terrorist"<br> - Wendigoon</blockquote>
             </div>
         </main>
     </div>
