Add links to the project page

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
         <h1>Projects</h1>
         <div class="projects">
             <div class="project-item">
-                <img src="images/rpg.png" alt="menu screen">
+                <a href="https://github.com/timmyjinks/CSC150_FinalGame"><img src="images/rpg.png" alt="menu screen"></a>
                 <h2>RPG</h2>
             </div>
             <div class="project-item">
