Add links to projects

--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,11 @@
                 <h2>RPG</h2>
             </div>
             <div class="project-item">
-                <img src="images/handdetection.png" alt="picture of python code">
-                <h2>Hand Detection</h2>
+               
+               
             </div>
             <div class="project-item">
-                <img src="images/translator.png" alt="picture of java code">
+                <a href="https://github.com/timmyjinks/Alpha-Translator.git"><img src="images/translator.png" alt="picture of java code"></a>
                 <h2>Translator</h2>
             </div>
         </div>
