Remove quote on home page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                     <a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
-            <div class="hero-section-item">
-                <blockquote id="hero-quote">"If I look up into the sky at night, and see, like a McDonald's ad, I'm becoming a terrorist"<br> - Wendigoon</blockquote>
-            </div>
+            <div class="hero-section-item"></div>
         </main>
     </div>
     <section>
