--- a/index.html
+++ b/index.html
@@ -46,13 +46,23 @@
         </div>
     </section>
     <footer>
-        <div class="footer-items">
-            <h1>Tyson Jenkins</h1>
-            <div class="footer-contact">
-                <a href="https://github.com/timmyjinks">GitHub</a>
-                <a href="https://www.linkedin.com/feed/">Linkedin</a>
+        <div>
+            <p id="footer-socials">Contact Me</p>
+        </div>
+        <div class="footer-content-wrapper">
+            <div class="footer-previous">
+                <a href="#"><p id="previous"><-- Previous</p></a>
             </div>
-            <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+            <div class="footer-contact">
+                <a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/timmyjinks"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <div class="footer-next">
+                <a href="#"><p id="Next">Next --></p></a>
+            </div>
+        </div>
+        <div>
+            <p id="footer-copyright">Copyright ©2024 by Tyson Jenkins</p>
         </div>
     </footer>
 </body>
