--- a/template.html
+++ b/template.html
@@ -22,11 +22,24 @@
         </nav>
     </header>
     <footer>
-        <div class="footer-icons">
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
+        <div>
+            <p id="footer-socials">Socials</p>
         </div>
-        <p id="copyright">Copyright ©2024 by Tyson Jenkins</p>
+        <div class="footer-content-wrapper">
+            <div class="footer-previous">
+                <a href="#"><p id="previous"><-- Previous</p></p>
+            </div>
+            <div class="footer-contact">
+                <a href="https://www.linkedin.com/feed/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://github.com/timmyjinks"><i class="fa-brands fa-github"></i></a>
+            </div>
+            <div class="footer-next">
+                <a href="#"><p id="Next">Next --></p></a>
+            </div>
+        </div>
+        <div>
+            <p id="footer-copyright">Copyright ©2024 by Tyson Jenkins</p>
+        </div>
     </footer>
 </body>
 </html>
