Update footer on all pages

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </section>
     <footer>
         <div>
-            <p id="footer-socials">Socials</p>
+            <p id="footer-socials">Contact Me</p>
         </div>
         <div class="footer-content-wrapper">
             <div class="footer-previous">
