--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
     </section>
     <footer>
         <div>
-            <p id="footer-socials">Socials</p>
+            <p id="footer-socials">Contact Me</p>
         </div>
         <div class="footer-content-wrapper">
             <div class="footer-previous">
