--- a/template.html
+++ b/template.html
@@ -23,11 +23,11 @@
     </header>
     <footer>
         <div>
-            <p id="footer-socials">Socials</p>
+            <p id="footer-socials">Contact Me</p>
         </div>
         <div class="footer-content-wrapper">
             <div class="footer-previous">
-                <a href="#"><p id="previous"><-- Previous</p></p>
+                <a href="#"><p id="previous"><-- Previous</p></a>
             </div>
             <div class="footer-contact">
                 <a href="https://github.com/timmyjinks"><i class="fa-brands fa-github"></i></a>
