--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       type="text/css"
     />
     <link rel="stylesheet" href="styles/global.css" />
-    <link rel="stylesheet" href="styles/index.css" />
     <script
       src="https://kit.fontawesome.com/e3f2f9bf33.js"
       crossorigin="anonymous"
@@ -52,6 +51,7 @@
       </div>
     </main>
     <section>
+      <h2 id="projects">Projects</h2>
       <div class="projects">
         <div class="project-item">
           <h2>2D Game Engine</h2>
