--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="https://fontlibrary.org//face/dejavu-sans-mono"
-      type="text/css"
-    />
-    <link rel="stylesheet" href="styles/global.css" />
+    <!-- <link -->
+    <!--   rel="stylesheet" -->
+    <!--   media="screen" -->
+    <!--   href="https://fontlibrary.org//face/dejavu-sans-mono" -->
+    <!--   type="text/css" -->
+    <!-- /> -->
+    <!-- <link rel="stylesheet" href="styles/global.css" /> -->
     <script
       src="https://kit.fontawesome.com/e3f2f9bf33.js"
       crossorigin="anonymous"
