--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!--   type="text/css" -->
     <!-- /> -->
     <!-- <link rel="stylesheet" href="styles/global.css" /> -->
-    <script
-      src="https://kit.fontawesome.com/e3f2f9bf33.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- <script -->
+    <!--   src="https://kit.fontawesome.com/e3f2f9bf33.js" -->
+    <!--   crossorigin="anonymous" -->
+    <!-- ></script> -->
     <title>Portfolio</title>
   </head>
   <body>
