--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--   href="https://fontlibrary.org//face/dejavu-sans-mono" -->
     <!--   type="text/css" -->
     <!-- /> -->
-    <!-- <link rel="stylesheet" href="styles/global.css" /> -->
+    <link rel="stylesheet" href="styles/global.css" />
     <!-- <script -->
     <!--   src="https://kit.fontawesome.com/e3f2f9bf33.js" -->
     <!--   crossorigin="anonymous" -->
