Add STUPED project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
       <h2 id="projects">Projects</h2>
       <div class="projects">
         <div class="project-item">
+          <h2>STUPED</h2>
+          <h3>
+            A personal project that converts an image into related articles
+          </h3>
+          <img src="images/STUPED.png" />
+          <div class="technologies">
+            <p>Nextjs</p>
+            <p>Python</p>
+            <p>Flask</p>
+            <p>CLIP</p>
+            <p>Docker</p>
+          </div>
+          <div class="demonstration">
+            <a href="http://cloud.tysonjenkins.codes">Demo</a>
+          </div>
+        </div>
+        <div class="project-item">
           <h2>2D Game Engine</h2>
           <h3>
             A game engine used for making 2D games, using C++ and the SDL
