Update technologies used in STUPED and change Programmer title

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="hero-section-item">
           <div class="hero-title">
             <h1 id="hero-name">Tyson Jenkins</h1>
-            <p>Programmer</p>
+            <p>Programmer / Funny guy (same thing)</p>
           </div>
         </div>
         <div class="hero-section-item">
@@ -55,15 +55,14 @@
       <div class="projects">
         <div class="project-item">
           <h2>STUPED</h2>
-          <h3>
-            A personal project that converts an image into related articles
-          </h3>
+          <h3>Returns articles that are related to an image</h3>
           <img src="images/STUPED.png" />
           <div class="technologies">
             <p>Nextjs</p>
             <p>Python</p>
             <p>Flask</p>
             <p>CLIP</p>
+            <p>Milvus</p>
             <p>Docker</p>
           </div>
           <div class="demonstration">
