Add Resume pdf and change images folder to assets

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </p>
         <nav>
           <a href="#projects">Projects</a>
+          <a href="./assets/Resume.pdf">Resume</a>
         </nav>
       </div>
     </header>
@@ -56,7 +57,7 @@
         <div class="project-item">
           <h2>STUPED</h2>
           <h3>Returns articles that are related to an image</h3>
-          <img src="images/STUPED.png" />
+          <img src="assets/STUPED.png" />
           <div class="technologies">
             <p>Nextjs</p>
             <p>Python</p>
@@ -75,7 +76,7 @@
             A game engine used for making 2D games, using C++ and the SDL
             library
           </h3>
-          <img src="images/game_engine.png" />
+          <img src="assets/game_engine.png" />
           <div class="technologies">
             <p>C++</p>
             <p>SDL</p>
@@ -90,7 +91,7 @@
             A fun 2D rpg game made using Java as well as the libGDX library for
             displaying the 2D graphics
           </h3>
-          <img src="images/rpg.png" />
+          <img src="assets/rpg.png" />
           <div class="technologies">
             <p>Java</p>
             <p>libGDX</p>
