Add TYSONCLOUD protject and change demo and tech styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-section-item">
           <div class="hero-title">
             <h1 id="hero-name">Tyson Jenkins</h1>
-            <p>Programmer / Funny guy (same thing)</p>
+            <p>Programmer</p>
           </div>
         </div>
         <div class="hero-section-item">
@@ -55,6 +55,26 @@
       <h2 id="projects">Projects</h2>
       <div class="projects">
         <div class="project-item">
+          <h2>TYSONCLOUD</h2>
+          <h3>
+            A web interface that allows for users to easily deploy web
+            applications
+          </h3>
+          <img src="assets/TYSONCLOUD-prototype.png" />
+          <div class="technologies">
+            <p>Python</p>
+            <p>FastAPI</p>
+            <p>Docker</p>
+            <p>Cloudflare</p>
+            <p>Svelte</p>
+          </div>
+          <div class="demonstration">
+            <a href="https://github.com/timmyjinks/TYSONCLOUD-prototype"
+              >Code</a
+            >
+          </div>
+        </div>
+        <div class="project-item">
           <h2>STUPED</h2>
           <h3>Returns articles that are related to an image</h3>
           <img src="assets/STUPED.png" />
@@ -67,7 +87,7 @@
             <p>Docker</p>
           </div>
           <div class="demonstration">
-            <a href="http://cloud.tysonjenkins.codes">Demo</a>
+            <!-- <a href="http://cloud.tysonjenkins.codes">Demo</a> -->
           </div>
         </div>
         <div class="project-item">
@@ -82,23 +102,7 @@
             <p>SDL</p>
           </div>
           <div class="demonstration">
-            <!-- <a href="#">Blog</a> -->
-          </div>
-        </div>
-        <div class="project-item">
-          <h2>Schlatt Dungeon</h2>
-          <h3>
-            A fun 2D rpg game made using Java as well as the libGDX library for
-            displaying the 2D graphics
-          </h3>
-          <img src="assets/rpg.png" />
-          <div class="technologies">
-            <p>Java</p>
-            <p>libGDX</p>
-            <p>Swing</p>
-          </div>
-          <div class="demonstration">
-            <!-- <a href="#">Blog</a> -->
+            <a href="https://github.com/timmyjinks/GameEngine">Code</a>
           </div>
         </div>
         <!-- <a id="more-projects" href="#">More Projects</a> -->
@@ -116,8 +120,8 @@
           </p>
           <p>
             Linkedin:
-            <a href="https://www.linkedin.com/feed/"
-              >https://www.linkedin.com/feed/</a
+            <a href="https://www.linkedin.com/in/tyson-jenkins-284221294/"
+              >https://www.linkedin.com/feed/in/tyson-jenkins-284221294/</a
             >
           </p>
         </div>
