--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <p>["gaming", "manga", "pc building"]</p>
             <br />
             <p># Skills</p>
-            <p>["HTML/CSS", "JavaScript", "C#", "C++", "Java", "Git"]</p>
+            <p>
+              ["Docker", "Python", "C++", "C", "HTML/CSS", "React",
+              "JavaScript", "Git"]
+            </p>
           </div>
         </div>
       </div>
