Add TYSONNOTE project

--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
           </div>
         </div>
         <div class="project-item">
+          <h2>TYSONNOTE</h2>
+          <h3>Turns pictures of notes into digital documents</h3>
+          <img src="assets/TYSONNOTE.png" />
+          <div class="technologies">
+            <p>Python</p>
+            <p>FastAPI</p>
+            <p>Docker</p>
+            <p>docTR</p>
+          </div>
+          <div class="demonstration">
+            <a href="https://tysonnote.tysonjenkins.dev">Demo</a>
+          </div>
+        </div>
+        <div class="project-item">
           <h2>STUPED</h2>
           <h3>Returns articles that are related to an image</h3>
           <img src="assets/STUPED.png" />
