Change TYSONCLOUD to TYSONCLOUD-prototype

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h2 id="projects">Projects</h2>
       <div class="projects">
         <div class="project-item">
-          <h2>TYSONCLOUD</h2>
+          <h2>TYSONCLOUD-prototype</h2>
           <h3>
             A web interface that allows for users to easily deploy web
             applications
