Add icons for socials

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
             <h1 id="hero-name">Tyson Jenkins</h1>
             <p>Programmer</p>
           </div>
+          <a class="icon" href="https://github.com/timmyjinks"
+            ><i class="fa-brands fa-github fa-2xl"></i
+          ></a>
+          <a
+            class="icon"
+            href="https://www.linkedin.com/in/tyson-jenkins-284221294/"
+            ><i class="fa-brands fa-linkedin fa-2xl"></i
+          ></a>
         </div>
         <div class="hero-section-item">
           <div class="about">
