Move project description

--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
       <div class="projects">
         <div class="project-item">
           <h2>TYSONCLOUD-prototype</h2>
-          <h3>
-            A web interface that allows for users to easily deploy web
-            applications
-          </h3>
           <img src="assets/TYSONCLOUD-prototype.png" />
+          <p>
+            TYSONCLOUD-prototype is a localized version of TYSONCLOUD that helps
+            dynamically deploy web applications with your own hardware.
+            TYSONCLOUD-prototype focuses on being minimal which is why it uses
+            Docker and integrates with Git for an easy way to manage your
+            applications.
+          </p>
           <div class="technologies">
             <p>Python</p>
             <p>FastAPI</p>
@@ -89,6 +92,11 @@
           <h2>TYSONNOTE</h2>
           <h3>Turns pictures of notes into digital documents</h3>
           <img src="assets/TYSONNOTE.png" />
+          <p>
+            TYSONNOTE allows you to take a picture of your notes and save it as
+            a text document. The project focuses on making it the process simple
+            but also allow for users to create an account and save their notes.
+          </p>
           <div class="technologies">
             <p>Python</p>
             <p>FastAPI</p>
@@ -101,8 +109,13 @@
         </div>
         <div class="project-item">
           <h2>STUPED</h2>
-          <h3>Returns articles that are related to an image</h3>
           <img src="assets/STUPED.png" />
+          <p>
+            Takes in an image and returns Wikipedia articles it thinks it
+            relates to. Made during Persistence Projects at Neumont College of
+            Computer Science and helping me learn my passion for making projects
+            with Docker
+          </p>
           <div class="technologies">
             <p>Nextjs</p>
             <p>Python</p>
@@ -117,11 +130,13 @@
         </div>
         <div class="project-item">
           <h2>2D Game Engine</h2>
-          <h3>
-            A game engine used for making 2D games, using C++ and the SDL
-            library
-          </h3>
           <img src="assets/game_engine.png" />
+          <p>
+            This 2D game engine allows you to build fun 2D games. It was built
+            in the C++ Programming II class at Neumont College of Computer
+            Science. Showcasing my skills in C++ and being creative with game
+            design.
+          </p>
           <div class="technologies">
             <p>C++</p>
             <p>SDL</p>
