--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           ></a>
           <a
             class="icon"
-            href="https://www.linkedin.com/in/tyson-jenkins-284221294/"
+            href="https://www.linkedin.com/in/tyson-jenkins"
             ><i class="fa-brands fa-linkedin fa-2xl"></i
           ></a>
         </div>
@@ -160,8 +160,8 @@
           </p>
           <p>
             Linkedin:
-            <a href="https://www.linkedin.com/in/tyson-jenkins-284221294/"
-              >https://www.linkedin.com/feed/in/tyson-jenkins-284221294/</a
+            <a href="https://www.linkedin.com/in/tyson-jenkins"
+              >https://www.linkedin.com/feed/in/tyson-jenkins</a
             >
           </p>
         </div>
