--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </p>
         <nav>
           <a href="#projects">Projects</a>
-          <a href="./assets/Resume.pdf">Resume</a>
+          <a href="./assets/TysonJenkins_Resume.pdf">Resume</a>
         </nav>
       </div>
     </header>
