--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       src="https://kit.fontawesome.com/e3f2f9bf33.js"
       crossorigin="anonymous"
     ></script>
-    <title>Portfolio</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/Generative AI, Psychedelic Space banner template, nostalgic 80s, 90s background_ Horizontal illustration of the future landscape with mountains, planets, trees, moon.jpg"
+    />
+    <title>Tyson Jenkins</title>
   </head>
   <body>
     <header>
@@ -38,9 +43,7 @@
           <a class="icon" href="https://github.com/timmyjinks"
             ><i class="fa-brands fa-github fa-2xl"></i
           ></a>
-          <a
-            class="icon"
-            href="https://www.linkedin.com/in/tyson-jenkins"
+          <a class="icon" href="https://www.linkedin.com/in/tyson-jenkins"
             ><i class="fa-brands fa-linkedin fa-2xl"></i
           ></a>
         </div>
