Update projects on README

--- a/index.html
+++ b/index.html
@@ -69,45 +69,40 @@
       <h2 id="projects">Projects</h2>
       <div class="projects">
         <div class="project-item">
-          <h2>TYSONCLOUD-prototype</h2>
-          <img src="assets/TYSONCLOUD-prototype.png" />
+          <h2>TYSONCLOUD</h2>
+          <img src="assets/TYSONCLOUD.png" />
           <p>
-            TYSONCLOUD-prototype is a localized version of TYSONCLOUD that helps
-            dynamically deploy web applications with your own hardware.
-            TYSONCLOUD-prototype focuses on being minimal which is why it uses
-            Docker and integrates with Git for an easy way to manage your
-            applications.
+            Cloud provider that simplifies web application deployment via docker
+            or github
           </p>
           <div class="technologies">
+            <p>Svelte</p>
+            <p>TypeScript</p>
             <p>Python</p>
             <p>FastAPI</p>
             <p>Docker</p>
             <p>Cloudflare</p>
-            <p>Svelte</p>
+            <p>NixOS</p>
           </div>
           <div class="demonstration">
-            <a href="https://github.com/timmyjinks/TYSONCLOUD-prototype"
-              >Code</a
-            >
+            <a href="https://github.com/timmyjinks/TYSONCLOUD">Github</a>
           </div>
         </div>
         <div class="project-item">
-          <h2>TYSONNOTE</h2>
-          <h3>Turns pictures of notes into digital documents</h3>
-          <img src="assets/TYSONNOTE.png" />
-          <p>
-            TYSONNOTE allows you to take a picture of your notes and save it as
-            a text document. The project focuses on making it the process simple
-            but also allow for users to create an account and save their notes.
-          </p>
+          <h2>Homelab</h2>
+          <img src="assets/Homelab.png" />
+          <p></p>
           <div class="technologies">
-            <p>Python</p>
-            <p>FastAPI</p>
+            <p>NixOS</p>
+            <p>Ubuntu Server</p>
+            <p>Proxmox</p>
             <p>Docker</p>
-            <p>docTR</p>
+            <p>Cloudflare</p>
+            <p>Pihole</p>
+            <p>Traefik</p>
           </div>
           <div class="demonstration">
-            <a href="https://tysonnote.tysonjenkins.dev">Demo</a>
+            <a href="https://github.com/timmyjinks/Operation-Homelab">Github</a>
           </div>
         </div>
         <div class="project-item">
@@ -145,7 +140,7 @@
             <p>SDL</p>
           </div>
           <div class="demonstration">
-            <a href="https://github.com/timmyjinks/GameEngine">Code</a>
+            <a href="https://github.com/timmyjinks/GameEngine">Github</a>
           </div>
         </div>
         <!-- <a id="more-projects" href="#">More Projects</a> -->
